<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/outline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/outline_apps_24"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/favorite_border_24"
            android:title="@string/menu_wishlist" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/person_outline_24"
            android:title="@string/menu_account" />

    </group>


</menu>
